tests/type/errors/bad_bin_op1.xi
foo() {
    b:bool = true < false
}